--- a/package.json
+++ b/package.json
@@ -1,63 +1,34 @@
 {
-  "name": "expenses_share",
-  "version": "0.3.1",
-  "description": "expenses_share backend",
-  "apidoc": {
-    "title": "expenses share API",
-    "url": "http://expenses_share.baptisteandre.com:3000"
+  "name": "expenses",
+  "version": "1.0.0",
+  "main": "server/server.js",
+  "engines": {
+    "node": ">=4"
   },
-  "main": "index_expenses.js",
   "scripts": {
-    "cron": "export $(cat .env-dev | xargs) && node database/cron/cron.js",
-    "create_database": "export $(cat .env-dev | xargs) && ruby database/generate_database.rb",
-    "create_database_prod": "export $(cat .env-prod | xargs) && ruby database/generate_database.rb",
-    "delete_database": "export $(cat .env-dev | xargs) && ruby database/delete_database.rb",
-    "reset_database": "npm run delete_database && npm run create_database",
-    "downgrade": "export $(cat .env-dev | xargs) && ruby database/downgrade.rb",
-    "start": "export $(cat .env-dev | xargs) && nodemon index_expenses.js",
-    "start42": "export $(cat .env-dev | xargs) && ./node_modules/nodemon/bin/nodemon.js index_expenses.js",
-    "kill_doc": "pkill -f 'node ./doc/doc.js'",
-    "start_doc": "nohup node ./doc/doc.js > doc/doc_log.out &",
-    "generate_doc": "apidoc -i base_app/ -o ./doc/static",
-    "launch_doc": "npm run kill_doc && npm run generate_doc && npm run start_doc",
-    "killOld": "pkill -f 'node index_expenses.js'",
-    "launchNew": "export $(cat .env-prod | xargs) &&  nohup node index_expenses.js &",
-    "prod": "npm run launch_doc && npm run killOld && npm install && npm run launchNew",
-    "test": "export $(cat .env-dev | xargs) && npm run reset_database && mocha "
+    "lint": "eslint .",
+    "start": "node .",
+    "posttest": "npm run lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nithramus/expenses_share.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nithramus/expenses_share/issues"
-  },
-  "homepage": "https://github.com/nithramus/expenses_share#readme",
   "dependencies": {
-    "apidoc": "^0.17.7",
-    "body-parser": "^1.18.3",
-    "connect-redis": "^3.3.3",
-    "express": "^4.16.3",
-    "express-async-errors": "^3.0.0",
-    "express-fileupload": "^0.4.0",
-    "express-session": "^1.15.6",
-    "file_utils_nithramir": "^1.0.2",
-    "google-auth-library": "^2.0.0",
-    "jsdoc": "^3.5.5",
-    "knex": "^0.15.2",
-    "mime-types": "^2.1.20",
-    "mysql": "^2.16.0",
-    "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0",
-    "randomstring": "^1.1.5",
-    "simple_crud_express": "0.3.21",
-    "superagent": "^3.8.3",
-    "underscore": "^1.9.1",
-    "uuid": "^3.3.2"
+    "compression": "^1.0.3",
+    "cors": "^2.5.2",
+    "helmet": "^3.10.0",
+    "loopback": "^3.22.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^6.2.0",
+    "loopback-connector-mysql": "^5.3.1",
+    "serve-favicon": "^2.0.1",
+    "strong-error-handler": "^3.0.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
-  }
+    "eslint": "^3.17.1",
+    "eslint-config-loopback": "^8.0.0"
+  },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "license": "UNLICENSED",
+  "description": "expenses"
 }
