--- a/server/model-config.json
+++ b/server/model-config.json
@@ -50,5 +50,9 @@
   "group_user": {
     "dataSource": "mysql",
     "public": false
+  },
+  "CompleteUser": {
+    "dataSource": "mysql",
+    "public": true
   }
 }
